--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,11 +10,11 @@
                         <span class="clear">
                             <span class="block m-t-xs">
                                 <strong class="font-bold"><%= current_user.full_name if current_user %></strong>
-                            </span> <span class="text-muted text-xs block">Example menu <b class="caret"></b></span>
+                            </span> <span class="text-muted text-xs block"> 操作 <b class="caret"></b></span>
                         </span>
                     </a>
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a href="#">Logout</a></li>
+                    <ul class="dropdown-menu m-t-xs">
+                        <li><%= link_to fa_icon('sign-out', text: 'Log out'), destroy_user_session_path, method: :delete %></li>
                     </ul>
                 </div>
                 <div class="logo-element">
