--- a/app/views/departments/_departments_grid.html.erb
+++ b/app/views/departments/_departments_grid.html.erb
@@ -1,36 +1,20 @@
 <%= grid(@departments_grid, :show_filters => :when_filtered) do |g|
-
-  
   g.column name: '#' do |department|
     department.id
   end
-  
 
-  
   g.column name: t('activerecord.attributes.department.name'), class: 'project-title' do |department|
-    [
-      link_to(department.name, department_path(department)),
-      content_tag(:small, "#{t('label.last_modified_at')} #{department.updated_at.strftime('%Y-%m-%d %H:%M:%S')}")
-    ].join('<br/>').html_safe
+    link_to(department.name, department_path(department))
   end
-  
 
-  
-  g.column name: t('activerecord.attributes.time_stamp.created_at') do |department|
-    department.created_at.strftime('%Y-%m-%d %H:%M:%S')
-  end
-  
-
-  
   g.column name: t('activerecord.attributes.time_stamp.updated_at') do |department|
     department.updated_at.strftime('%Y-%m-%d %H:%M:%S')
   end
-  
 
   g.column html: {class: 'project-actions'} do |department|
     [
-      link_to(fa_icon("pencil"), edit_department_path(department), class: 'btn btn-white btn-sm', remote: true, data: {toggle: 'tooltip'}, title: t('button.edit')),
-      link_to(fa_icon("trash"), department_path(department), class: 'btn btn-white btn-sm', method: :delete, remote: true, data: {toggle: 'tooltip'}, title: t('button.delete'))
+      link_to(fa_icon("pencil"), edit_department_path(department), class: 'btn btn-white btn-sm', data: {toggle: 'tooltip'}, title: t('buttons.edit')),
+      link_to(fa_icon("trash"), department_path(department), class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: t('confirms.delete'), toggle: 'tooltip'}, title: t('buttons.delete'))
     ].join(' ').html_safe
   end
 end -%>
