--- a/app/views/clients/_search_form.html.erb
+++ b/app/views/clients/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@query_client_params, url: search_clients_path, as: :client, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@query_client_params, url: search_clients_path, as: :client, wrapper: :vertical_form) do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :application_number, label: t('activerecord.attributes.client.application_number') %>
@@ -7,8 +7,6 @@
   <%= f.input :type, label: t('activerecord.attributes.client.type'), collection: [['个人', IndividualClient.name], ['机构', InstitutionClient.name]] %>
 
   <div class="form-group">
-      <div class="col-sm-4 col-sm-offset-2">
-          <%= f.submit t('buttons.search'), class: 'btn btn-white btn-sm' %>
-      </div>
+      <%= f.submit t('buttons.search'), class: 'btn btn-white btn-sm' %>
   </div>
 <% end %>
